<resources>
    <string name="app_name">Tinkov currency rate forecast</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_test">Test</string>
    <string name="lastupdateTCS">"Updated: "</string>
    <string name="na_string">N/A</string>
    <string name="title_now">Now</string>
    <string name="title_week">Week</string>
    <string name="showbutton">Show</string>

    <string name="statlink_candl">https://iss.moex.com/iss/engines/currency/markets/selt/boards/CETS/securities/</string>
    <string name="statlink2">https://www.cbr.ru/scripts/XML_dynamic.asp?date_req1=</string>
    <string name="title_archive">Archive</string>

    <string name="incorrect_number">Input correct value to convert!</string>
    <string name="title_calc">Calculator</string>
    <string name="title_activity_settings">Settings</string>


    <string name="update_header">Autoupdate courses</string>
    <string name="update_title">Enable</string>
    <string name="update_period">Update period</string>
    <string name="action_settings">Settings</string>
    <string name="notify_header">Notifications configure</string>
    <string name="notify_enable">Enable</string>
    <string name="notify_on">Notifications ON</string>
    <string name="notify_off">Notifications OFF</string>
    <string name="currency1">Currency</string>

    <string name="sell1">Sell low then, rub (0- off)</string>
    <string name="buy1">Buy high then, rub  (0-off)</string>
    <string name="widget_header">Graph by widget info</string>
    <string name="widget_title">Show</string>
    <string name="title_today">Today</string>


    <string name="ARCFRAGcursCBGraphLabel">Central bank</string>
    <string name="ARCFRAGforecDayGraph"> Forecast day</string>
    <string name="ARCFRAGaverage"> Average</string>
    <string name="ARCFRAGmovAverForecGraph"> Moving average forecast. Error : </string>
    <string name="ARCFRAGexponWeighGraph"> Exponential smoothing </string>
    <string name="ARCFRAGexponWeighForecGraph"> Exp smoothing forecast. Error: </string>
    <string name="ARCFRAGleastSqMeth"> Least square method </string>
    <string name="ARCFRAGleastSqMethGraph"> Less sq meth forecast. Error: </string>
    <string name="ARCFRAGshowbutton">Show graph</string>
    <string name="ARCFRAGError">Choose correct dates!</string>

    <string name="CALCFRAGbuy">Buy</string>
    <string name="CALCFRAGsell">Sell</string>
    <string name="CALCFRAGdatafrautoup">Data from autoupdate</string>
    <string name="CALCFRAGdatafrwidget">Data from widget updates</string>
    <string name="CALCFRAGbuying">Buying</string>
    <string name="CALCFRAGselling">Selling</string>
    <string name="NOWFRAGsource">source</string>
    <string name="TODAYFRAGchoosediffinterval">Choose less time interval</string>
    <string name="TODAYFRAGMMVB">MOEX</string>
    <string name="tcsfrom">TCS from</string>
    <string name="CBtill">CB till</string>
    <string name="namechannel">Volute monitoring</string>
    <string name="descriptionchannel">Notify of changing course</string>

    <string name="curr">Cur.</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="cbrf">Official</string>
    <string name="ARCFRAGfrom">from</string>
    <string name="ARCFRAGtill">till</string>
    <string name="choosedwarn">MOEX graph can show maximum 2 years period</string>
    <string name="buycourse">Buying</string>
    <string name="higher">higher then</string>
    <string name="sellcourse">Selling</string>
    <string name="lower">lower then</string>
    <string name="attention">Attention!</string>
    <string name="noconnection">There is no internet connection!</string>
    <string name="official_course">Official course</string>
    <string name="refreshed">Refreshed!</string>
    <string name="forec">Forecast</string>
    <string name="underscore">______</string>
    <string name="underscore2">_________</string>
    <string name="refresh_animation">On refresh animation</string>
    <string name="animation_on">animation enabled</string>
    <string name="animation_off">animation disabled</string>
    <string name="fonts">Font selector</string>
    <string name="font">Current font</string>
    <string name="digital">Digital</string>
    <string name="wrongcountTK">Choose more than 2 work days range to see MOEX graph with forecast!</string>
    <string name="wrongcountCB">Choose more than 2 work days range to see CB graph!</string>
    <string name="listisempty">List is already empty!</string>
    <string name="notify_sound">Animation with sound</string>
    <string name="equalsign">=</string>
    <string name="usdsign">$</string>
    <string name="eursign">€</string>
    <string name="needrefresh">Please refresh actual currency values on the Now screen</string>


</resources>