<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_now">

    <fragment
            android:id="@+id/navigation_now"
            android:name="com.vadimko.curforeckotlin.ui.now.NowFragment"
            tools:layout="@layout/fragment_now"
            android:label="@string/title_now">

    </fragment>

    <fragment
            android:id="@+id/navigation_today"
            android:name="com.vadimko.curforeckotlin.ui.today.TodayFragment"
            android:label="@string/title_today"
            tools:layout="@layout/fragment_today" />

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.vadimko.curforeckotlin.ui.archive.ArchiveFragment"
            android:label="@string/title_archive"
            tools:layout="@layout/fragment_archive" />

    <fragment
            android:id="@+id/navigation_calc"
            android:name="com.vadimko.curforeckotlin.ui.calc.CalcFragment"
            android:label="@string/title_calc"
            tools:layout="@layout/fragment_calc" />

</navigation>