<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:theme="@style/ThemeOverlay.CurForecKotlin.AppWidgetContainer"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorWidgetBack"
        android:layout_width="match_parent"
        android:id="@+id/startAPP"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="0dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorTRYnorm"
                android:layout_height="wrap_content"
                android:text="@string/curr" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="12sp"
                android:textColor="@color/colorTRYnorm"
                android:layout_height="wrap_content"
                android:text="@string/buy" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="12sp"
                android:textColor="@color/colorTRYnorm"
                android:layout_height="wrap_content"
                android:text="@string/sell" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textSize="12sp"
                android:textColor="@color/colorTRYnorm"
                android:layout_height="wrap_content"
                android:text="@string/cbrf" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/usdsign" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/usd_buy"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                tools:text="30.20₽" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/usd_sell"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                tools:text="40.15₽" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/cbrf_usd"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                tools:text="45.15(-0.03)₽" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/eursign" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/eur_buy"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                tools:text="60.₽" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:id="@+id/eur_sell"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                tools:text="75.15₽" />

        <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:id="@+id/cbrf_euro"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"
                tools:text="69.15(+0.07)₽" />
    </LinearLayout>

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/dt"
                    android:textColor="@color/MainTextColor"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    tools:text="ТКС от 09.12.20" />

            <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/dt2"
                    android:textColor="@color/MainTextColor"
                    android:layout_marginStart="10dp"
                    android:textSize="11sp"
                    android:layout_height="wrap_content"
                    tools:text="ЦБРФ от 09.12.20" />
        </LinearLayout>

        <ImageView
                android:layout_marginEnd="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:id="@+id/refresh_Widget"
                android:src="@drawable/refresh" />
    </LinearLayout>
</LinearLayout>