<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.archive.ArchiveFragment">

    <androidx.core.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/spinnerTextColor"
                        android:layout_height="wrap_content"
                        android:text="@string/ARCFRAGfrom"
                        android:id="@+id/from" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/spinnerTextColor"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ARCFRAGtill"
                        android:id="@+id/till" />


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <Spinner
                        android:layout_width="0dp"
                        android:layout_weight="1.0"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/currchoose" />

                <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:textSize="12sp"
                        android:textColor="@color/blackwhite"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ARCFRAGshowbutton"
                        android:id="@+id/buildgraph" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chartcbrf"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:forceDarkAllowed="false"
                        android:background="@drawable/paper5"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="15dp" />

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/paper4" />

                <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/linearforec"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:forceDarkAllowed="false"
                        android:background="@drawable/paper5"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="15dp" />

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/paper4" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="vertical">

                </View>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>